# vektr-company-brain

./: .gitignore  README.md  md.md  package.json  vektr_24h_sprint_prd.md
apps/web/: package-lock.json  package.json  proxy.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(marketing)/: layout.tsx  page.tsx
apps/web/src/app/(product)/: layout.tsx
apps/web/src/app/(product)/ask/: page.tsx
apps/web/src/app/(product)/demo/: page.tsx
apps/web/src/components/: app-page.tsx  ask-workspace.tsx  demo-ingestion-workspace.tsx  graph-preview.tsx  graph-workspace.tsx  product-nav.tsx  product-shell.tsx  skills-workspace.tsx  workspace-summary-card.tsx
apps/web/src/components/ui/: vektr-button.tsx
apps/web/src/lib/: env.ts  health.ts  mock-data.ts  navigation.ts  types.ts
apps/web/src/lib/clients/: app-health.ts  worker.ts
apps/web/src/lib/env/: public.ts  server.ts
apps/web/src/lib/server/: ingestion.ts  neo4j.ts  product-routing.ts
apps/web/src/lib/supabase/: admin.ts  client.ts  database.types.ts  proxy.ts  server.ts  shared.ts
docs/: project-memory.md  tei-qwen-setup.md
seed/acme/: customer-success-slack.json  dataflow-vendor-renewal.json  email-threads.json  nov-3-outage-postmortem.md  pricing-exceptions.md  refund-policy.md  security-procurement-gap.md  welcome-to-acme.md
supabase/migrations/: 20260430130000_init_auth_rls.sql  20260501123000_ingestion_pipeline.sql  20260501143000_tei_qwen_embeddings.sql
worker/: .env.example  pyproject.toml
worker/app/: __init__.py  config.py  connectors.py  ingestion.py  main.py
(+25 files in other folders)
