[project]
name = "vektr-worker"
version = "0.1.0"
description = "FastAPI worker scaffold for the Vektr sprint."
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.136,<0.137",
  "httpx>=0.28,<0.29",
  "neo4j>=6.1,<6.2",
  "psycopg[binary]>=3.3,<3.4",
  "pydantic-settings>=2.14,<3.0",
  "python-dotenv>=1.2,<2.0",
  "supabase>=2.29,<3.0",
]

[tool.fastapi]
entrypoint = "app.main:app"
